<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userData_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:text="@string/user_data_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userName_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/user_name"
            app:layout_constraintTop_toBottomOf="@+id/userData_mainActivity" />

        <EditText
            android:id="@+id/userSurname_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/user_surname"
            app:layout_constraintTop_toBottomOf="@+id/userName_mainActivity" />

        <Button
            android:id="@+id/add_user_mainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userSurname_mainActivity" />

        <EditText
            android:id="@+id/edit_userId_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:inputType="number"
            android:hint="@string/user_id"
            app:layout_constraintTop_toBottomOf="@+id/add_user_mainActivity" />

        <EditText
            android:id="@+id/edit_userName_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/user_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_userId_mainActivity" />

        <EditText
            android:id="@+id/edit_userSurname_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:hint="@string/user_surname"
            app:layout_constraintTop_toBottomOf="@+id/edit_userName_mainActivity" />

        <Button
            android:id="@+id/edit_user_mainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_userSurname_mainActivity" />

        <EditText
            android:id="@+id/delete_userId_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:hint="@string/user_id"
            app:layout_constraintTop_toBottomOf="@+id/edit_user_mainActivity" />

        <Button
            android:id="@+id/delete_user_mainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_userId_mainActivity" />

        <TextView
            android:id="@+id/userListTitle_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:text="@string/users_list_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_user_mainActivity" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userList_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userListTitle_mainActivity"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>